# OpenCVStarter

./: .gitignore  CMakeLists.txt  CVCamWindow.cpp  CVWindow.cpp  main.cpp
